--- a/VidPlan/VidPlan/Base.lproj/Main.storyboard
+++ b/VidPlan/VidPlan/Base.lproj/Main.storyboard
@@ -164,6 +164,21 @@
             <point key="canvasLocation" x="135.1145038167939" y="3.5211267605633805"/>
         </scene>
         <!--View Controller-->
+        <scene sceneID="bVZ-dR-R8T">
+            <objects>
+                <viewController id="slC-m6-ceh" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="f3d-CQ-MBt">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="wXB-Mr-Rhu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jGr-ms-fIx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="957" y="-279"/>
+        </scene>
+        <!--View Controller-->
         <scene sceneID="xax-mn-3SA">
             <objects>
                 <viewController id="Fch-PD-6YT" sceneMemberID="viewController">
@@ -199,7 +214,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zyu-3d-uK3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="922.90076335877859" y="22.535211267605636"/>
+            <point key="canvasLocation" x="947" y="392"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="BH8-FF-gSs">
+            <objects>
+                <viewController id="GfF-EZ-PLk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oD5-Hd-Md9">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="106-xz-33H"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tg8-5F-CwI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1725" y="403"/>
         </scene>
     </scenes>
     <resources>
